argo-rollouts/overlays/localhost/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: bluegreen-gobg-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: bg.7f000001.nip.io
    http:
      paths:
      - backend:
          service:
            name: gobg-active
            port:
              number: 8080
        path: /
        pathType: Prefix
